[package]
name = "dbus-parsec"
version = "0.2.2"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

[[bin]]
name = "dbus-parsec"
path = "src/daemon.rs"

[[bin]]
name = "dbus-parsec-control"
path = "src/utility.rs"

[dependencies]
dbus = "0.8.4"
dbus-crossroads = "0.2.1"
parsec-client = { version = "0.9.0", features = ["no-fs-permission-check"] }
ring = "0.16.15"
anyhow = "1.0.32"

[build-dependencies]
dbus-codegen = "0.5.0"
